--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-{% load static %}  <!-- Load static files in Django -->
+{% load static %} 
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,6 @@
 </head>
 <body>
   <div class="content">
-    <!-- Main content goes here -->
   </div>
   <footer>
     <p>Made by <a href="https://stevanovicm.com/">Milos Stevanovic</a> &copy; 2024 | All Rights Reserved</p>
