--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,32 +1,27 @@
-/* Style for the player cards */
 .player-card {
-  background-color: #ffffff; /* Card background color */
+  background-color: #ffffff; 
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Keeping the shadow for the outer card */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   transition: transform 0.4s ease-in-out;
   cursor: pointer;
-  text-align: center; /* Center everything in the card */
-  margin-bottom: 30px; /* Add space between the cards */
+  text-align: center;
+  margin-bottom: 30px; 
   max-width: 385px;
 }
 
-/* Hover effect for the player card */
 .player-card:hover {
-  transform: translateY(-20px); /* More prominent hover effect */
+  transform: translateY(-20px); 
 }
 
-/* Styling for the image in the player card */
 .player-thumb-image {
   width: 100%;
   height: 400px;
   object-fit: cover;
-  border-radius: 10px 10px 0 0; /* Make the image's top corners rounded */
-  /* Remove the bottom rounding to make the bottom edges flat */
+  border-radius: 10px 10px 0 0; 
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-/* Player details container */
 .player-details {
   padding: 15px;
   color: #000000;
@@ -35,7 +30,6 @@
   justify-content: space-between;
 }
 
-/* Player name and surname styling */
 .player-details .name {
   font-weight: bold;
   font-family: 'Roboto', sans-serif;
@@ -45,7 +39,6 @@
   margin: 10px 0;
 }
 
-/* Player info list styling */
 .player-info-list {
   list-style-type: none;
   padding-left: 0;
@@ -59,12 +52,10 @@
   margin: 5px 0;
 }
 
-/* Player info label styling */
 .player-info-list li strong {
   color: #333333;
 }
 
-/* Styling for the description paragraph */
 .player-details p {
   font-size: 13px;
   color: #000000;
