--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,4 +1,3 @@
-/* General body styling */
 body {
     background-color: #f7f9fc;
     font-family: 'Roboto', sans-serif;
@@ -10,7 +9,6 @@ body {
     overflow-x: hidden;
 }
 
-/* User Name Styling */
 .user-name {
     display: block;
     text-align: center;
@@ -27,7 +25,6 @@ body {
     transition: color 0.3s ease;
 }
 
-/* Card and Profile Container */
 .card {
     border-radius: 8px;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
@@ -41,10 +38,9 @@ body {
 }
 
 .card:hover {
-    transform: scale(1.05); /* Scale the whole card on hover */
+    transform: scale(1.05); 
 }
 
-/* User Profile Styling */
 .user-profile {
     background: linear-gradient(to top, #007bff, #66aaff);
     border-radius: 8px;
@@ -57,7 +53,7 @@ body {
 }
 
 .user-profile:hover {
-    transform: scale(1.05); /* Scale the whole profile on hover */
+    transform: scale(1.05); 
     background: linear-gradient(to top, #0056b3, #4c92f2);
 }
 
@@ -81,7 +77,6 @@ body {
     color: #fff;
 }
 
-/* Profile Details */
 .card-block {
     padding: 1.25rem;
 }
@@ -96,7 +91,6 @@ body {
     color: #007bff;
 }
 
-/* Button Styling */
 .btn-edit, .btn-obrisi, .btn-edit-profile {
     font-size: 14px;
     padding: 8px 20px;
@@ -106,7 +100,6 @@ body {
     transition: background-color 0.3s, transform 0.3s ease;
 }
 
-/* Edit Profile Button */
 .btn-edit-profile {
     background-color: #007bff;
     color: white;
@@ -129,7 +122,6 @@ body {
     box-shadow: 0 0 10px rgba(30, 144, 255, 0.7);
 }
 
-/* Delete Button */
 .btn-obrisi {
     background-color: #dc3545;
     color: white;
@@ -144,7 +136,6 @@ body {
     transform: translateY(-3px);
 }
 
-/* Modal Styling */
 .modal-content {
     border-radius: 10px;
     padding: 20px;
@@ -156,7 +147,6 @@ body {
     color: white;
 }
 
-/* Post Image Styling */
 .post-image {
     width: 100%;
     height: 300px;
@@ -169,7 +159,6 @@ body {
     transform: scale(1.05);
 }
 
-/* Social Links (Icons) */
 .user-card-full .social-link li {
     display: inline-block;
 }
@@ -180,7 +169,6 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-/* Media Queries */
 @media (max-width: 768px) {
     .card {
         padding: 25px;
