--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
     <title>PROFIL</title>
 
-    <!-- Additional CSS Files -->
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
@@ -28,14 +27,11 @@
                                 <div class="col-sm-4 user-profile">
                                     <div class="card-block text-center text-white">
                                         <div class="m-b-25">
-                                            <!-- User Profile Image -->
                                             <img src="{% static 'assets/images/user.jpg' %}" class="img-radius" alt="User-Profile-Image">
                                         </div>
-                                        <!-- Display username -->
                                         <h6 class="f-w-800">{{ user.username }}</h6>
                                         <p class="f-w-600" style="color: #fff;">{{ user.first_name }} {{ user.last_name }}</p>
     
-                                        <!-- Edit Profile Button -->
                                         <a href="{% url 'profileedit' user.id %}" class="btn-edit-profile">Uredi Profil</a>
                                     </div>
                                 </div>
@@ -62,19 +58,16 @@
                                                 {% if post.user_id == user.id %}
                                                 <div class="col col-lg-6 col-12 mb-2">
                                                     {% if post.image %}
-                                                        <!-- Display Post Image -->
                                                         <img class="post-image" src="{{ post.image.url }}" alt="Post Image" />
                                                     {% else %}
                                                         <p>Nema Slike</p>
                                                     {% endif %}
                                                     <div class="px-3 py-2 shadow">
                                                         <span class="user-name">{{ post.ime }} {{ post.prezime }}</span>
-                                                        <!-- Buttons for editing and deleting -->
                                                         <div class="d-flex justify-content-between">
                                                             <a href="{% url 'editpost' post.id %}">
                                                                 <button class="btn-edit">Uredi</button>
                                                             </a>
-                                                            <!-- Modal trigger for delete -->
                                                             <a href="#" data-bs-toggle="modal" data-bs-target="#deleteModal" data-post-id="{{ post.id }}">
                                                                 <button class="btn-obrisi">Obriši</button>
                                                             </a>
@@ -94,7 +87,6 @@
         </div>
     </div>
     
-    <!-- Modal for confirmation -->
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -124,13 +116,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/js/dist/button.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/js/dist/alert.js"></script>
 
-    <!-- JavaScript for Modal functionality -->
     <script>
         $('#deleteModal').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget); // The button that triggered the modal
-            var postId = button.data('post-id'); // Extract post ID from data-* attribute
-            var formAction = "{% url 'deletepost' 0 %}".replace('0', postId); // Dynamically set the form action URL
-            $(this).find('#deleteForm').attr('action', formAction); // Set the form action dynamically
+            var button = $(event.relatedTarget); 
+            var postId = button.data('post-id'); 
+            var formAction = "{% url 'deletepost' 0 %}".replace('0', postId); 
+            $(this).find('#deleteForm').attr('action', formAction); 
         });
     </script>
 
