--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-{% load static %} 
+{% load static %}  <!-- Load static files in Django -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div class="content">
+    <!-- Main content goes here -->
   </div>
   <footer>
     <p>Made by <a href="https://stevanovicm.com/">Milos Stevanovic</a> &copy; 2024 | All Rights Reserved</p>
