--- a/templates/index.html
+++ b/templates/index.html
@@ -192,6 +192,7 @@
         <div class="col-lg-12">
           <div class="all-players">
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1">
+              {% for post in posts %}
               <div class="col mb-4">
                 <a href="{% url 'post' post.id %}" class="text-decoration-none">
                   <div class="player-card">
