--- a/templates/profileedit.html
+++ b/templates/profileedit.html
@@ -9,10 +9,12 @@
   <meta name="author" content="TemplateMo">
   <title>Uredi Profil</title>
 
+  <!-- External CSS Files -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="{% static 'css/profileedit.css' %}">
 
 </head>
@@ -21,6 +23,7 @@
 
   {% include 'header.html' %}
 
+  <!-- Page Content -->
   <div class="container">
     <div class="d-flex justify-content-center align-items-center " style="height: 100vh;">
 
@@ -48,6 +51,7 @@
     </div>
   </div>
 
+  <!-- jQuery and Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0piCAsjQJFeYcD0ryeYwGfYpE1STTQhXwlhpSBYsH1u+K3dE" crossorigin="anonymous"></script>
 
