--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -28,7 +28,7 @@ h3 {
 a {
     text-decoration: none;
     color: var(--primary-color);
-    transition: color 0.3s ease; 
+    transition: color 0.3s ease; /* Smooth color transition */
 }
 
 a:hover {
@@ -45,7 +45,7 @@ a:hover {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background 0.3s ease, color 0.3s ease; 
+    transition: background 0.3s ease, color 0.3s ease; /* Smooth background and color transition */
 }
 
 .btn-prijava:hover {
@@ -56,7 +56,7 @@ a:hover {
 
 form {
     width: 50%;
-    margin: 0 auto; 
+    margin: 0 auto; /* Center the form */
 }
 
 .input-group {
