--- a/templates/post-details.html
+++ b/templates/post-details.html
@@ -8,14 +8,11 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Igrač</title>
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-  <!-- Custom CSS Files -->
   <link rel="stylesheet" href="{% static 'css/post-details.css' %}">
 </head>
 
@@ -23,12 +20,10 @@
 
   {% include 'header.html' %}
 
-  <!-- Blog Post Section -->
   <section class="blog-posts grid-system">
     <div class="container">
       <div class="blog-content">
         <div class="row">
-          <!-- Left Column: Image Section -->
           <div class="col-md-6">
             <div class="blog-thumb">
               {% if post.image %}
@@ -40,11 +35,9 @@
             </div>
           </div>
 
-          <!-- Right Column: YouTube Video -->
           <div class="col-md-6">
             <div class="video-container">
                 {% if post.video_url %}
-                    <!-- Directly render the iframe stored in video_url -->
                     <div class="embed-responsive embed-responsive-16by9">
                         {{ post.video_url|safe }}
                     </div>
@@ -52,7 +45,6 @@
             </div>
         </div>
 
-        <!-- Table for Player Stats -->
         <table class="table mt-4">
           <tbody>
             <tr>
@@ -87,17 +79,15 @@
               <td>Nedostaci</td>
               <td>{{ post.nedostaci }}</td>
             </tr>
-            <!-- Add the datum_rođenja (date of birth) row -->
             <tr>
               <td>Datum Rođenja</td>
-              <td>{{ post.datum_rođenja|date:"d-m-Y" }}</td> <!-- Format the date as needed -->
+              <td>{{ post.datum_rođenja|date:"d-m-Y" }}</td> 
             </tr>
           </tbody>
         </table>
         
 
         {% if user.is_authenticated %}
-        <!-- Print Button Centered Below the Table -->
         <div class="text-center">
           <button onclick="window.print()" class="btn btn-primary">Štampaj ovaj post</button>
         </div>
